--- a/_posts/2015-07-06-Quartz-2D-绘图技术.markdown
+++ b/_posts/2015-07-06-Quartz-2D-绘图技术.markdown
@@ -33,6 +33,8 @@ comments: true
 
 	#import "BJView.h"
 
+	@implementation BJView
+	
 	- (void)drawRect:(CGRect)rect {
     
     //获取图形上下文
@@ -66,6 +68,8 @@ comments: true
     
     CGContextDrawPath(context, kCGPathFillStroke);
 	}
+	
+	@end
 
 效果:
 ![直线](http://oaldigvho.bkt.clouddn.com/paper1.1.png)
