--- a/_posts/2015-07-06-Quartz-2D-绘图技术.markdown
+++ b/_posts/2015-07-06-Quartz-2D-绘图技术.markdown
@@ -227,7 +227,7 @@ comments: true
 
 <br>
 
-##### 4.4 绘制一段圆弧（闭合且填充内容,相当于扇形）
+##### 4.5 绘制一段圆弧（闭合且填充内容,相当于扇形）
 
 	#import "BJView.h"
 	
@@ -272,3 +272,50 @@ comments: true
 
 效果:
 ![圆弧](http://oaldigvho.bkt.clouddn.com/paper1.5.png)
+
+<br>
+
+##### 4.6 绘制一段文字
+
+	#import "BJView.h"
+	
+	#define arc(angle) ((angle)*(M_PI/180.0))
+
+	@implementation BJView
+
+	- (void)drawRect:(CGRect)rect {
+    
+    	//获取图形上下文
+    	CGContextRef context = UIGraphicsGetCurrentContext();
+    
+    	//设置边框颜色
+    	CGContextSetRGBStrokeColor(context, 1, 0, 0, 1);
+    
+    	//设置填充颜色
+    	CGContextSetRGBFillColor(context, 0, 1, 0, 1);
+    
+    	//设置线条宽度
+    	CGContextSetLineWidth(context, 2.f);
+    
+    	//设置线条起点和终点的样式
+    	//    CGContextSetLineCap(context, kCGLineCapRound);
+    
+    	//设置线条的转角的样式
+    	//    CGContextSetLineJoin(context, kCGLineJoinRound);
+    	    
+    	NSString * str = @"BradleyJohnson";
+    	NSMutableDictionary * attributes = [NSMutableDictionary dictionary];
+    	attributes[NSFontAttributeName] = [UIFont systemFontOfSize:20];    		attributes[NSForegroundColorAttributeName] = [UIColor purpleColor];
+    	attributes[NSBackgroundColorAttributeName] = [UIColor whiteColor];
+    	[str drawInRect:CGRectMake(100, 100, 200, 30) withAttributes:attributes];
+    
+    	//闭合路径
+    	//    CGContextClosePath(context);
+    
+		CGContextDrawPath(context, kCGPathFillStroke);
+	}
+	
+	@end
+
+效果:
+![文字](http://oaldigvho.bkt.clouddn.com/paper1.6.png)
