change new paper

--- a/_posts/2015-08-11-多线程使用.markdown
+++ b/_posts/2015-08-11-多线程使用.markdown
@@ -199,7 +199,8 @@ comments: true
     	[blockOperation start];
 	}
 	@end
-（注意：`addExecutionBlock`方法必须在`start`方法之前执行，不然会引起崩溃。）
+	
+(注意：`addExecutionBlock`方法必须在`start`方法之前执行，不然会引起崩溃。）
 <br>
 <br>
 
